@@ -1,3 +1,8 @@
+2011-01-13  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* library/msgbox.tcl: [Patch #3154705] Close button has no
+	effect. Add <Escape> binding as well (backported from Tcl 8.5)
+
 2010-10-31  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* win/tcl.m4     Add -D_CRT_SECURE_NO_DEPRECATE and
